--- a/src/main/resources/mop.properties
+++ b/src/main/resources/mop.properties
@@ -1,7 +1,7 @@
-mop.host=
-mop.port=
-mop.username=
-mpo.password=
-mop.connection.pool.max=
-mop.connection.pool.maxPerRoute=
-mop.connection.timeout=
+mop.host=localhost
+mop.port=444
+mop.username=test
+mop.password=test
+mop.connection.pool.max=20
+mop.connection.pool.maxPerRoute=10
+mop.connection.timeout=10000
