Added property to enable https

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,4 +5,5 @@ mop.password=mopdacol14
 mop.connection.pool.max=20
 mop.connection.pool.maxPerRoute=2
 mop.connection.timeout=10000
+mop.useHttps=true
 
